[gd_scene load_steps=8 format=3 uid="uid://d0vres6hkcoxf"]

[ext_resource type="PackedScene" uid="uid://d4a58tg3s4j0l" path="res://assets/MenuScreens/main_menu.tscn" id="1_0w38x"]
[ext_resource type="Script" uid="uid://cqxbb51j2r04f" path="res://scenes/playerScenes/introplayer.gd" id="1_n7qod"]

[sub_resource type="Animation" id="Animation_168gg"]
resource_name = "floatIn"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-23.3143, 20.6383, -78.2541), Vector3(0, 1.75721, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/Camera3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.385975, -0.654311, 0.010469), Vector3(0, -0.0608597, 0)]
}

[sub_resource type="Animation" id="Animation_n7qod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.75721, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.0608597, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7qod"]
_data = {
&"RESET": SubResource("Animation_n7qod"),
&"floatIn": SubResource("Animation_168gg")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n7qod"]
height = 2.87251

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ka2ur"]
radius = 0.429022
height = 1.64591

[node name="introPlayer" type="CharacterBody3D"]
script = ExtResource("1_n7qod")

[node name="Main Menu" parent="." instance=ExtResource("1_0w38x")]

[node name="body" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="body"]
transform = Transform3D(0.998149, 0, -0.0608221, 0, 1, 0, 0.0608221, 0, 0.998149, 0, 1.75721, 0)

[node name="playerAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n7qod")
}
autoplay = "floatIn"

[node name="crouchCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.736917, 0)

[node name="standCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87763, 0)

[node name="crouchDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="crouchRay" type="RayCast3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 1.42268, 0)

[node name="standingCollide" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.966512, 0)
shape = SubResource("CapsuleShape3D_n7qod")

[node name="crouchingCollide" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.355522, 0)
visible = false
shape = SubResource("CapsuleShape3D_ka2ur")

[connection signal="animation_finished" from="playerAnimations" to="." method="_on_player_animations_animation_finished"]
[connection signal="timeout" from="crouchDelay" to="." method="_on_crouch_delay_timeout"]
